--- a/Tools/style.css
+++ b/Tools/style.css
@@ -603,7 +603,7 @@ body{
 }
 
 
-/* MENU FRAMES */
+/* CURVY FRAMES */
 
 #top{
     height: 100vh;
@@ -1178,4 +1178,172 @@ tr{
     to{
         opacity: 1;
     }
+}
+
+
+
+
+
+/* --------------------------------------MEDIA QUERY------------------------------------------ */
+
+
+
+
+
+@media screen and (max-width: 480px) {
+
+    html{
+        scroll-snap-type: none;
+    }
+
+    .section{
+        scroll-snap-align: none;
+    }
+    
+    /* NAVBAR */
+
+    .navbar{
+        height: 13vh;
+        width: 100vw;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .logo{
+        padding-left: 0;
+        padding-top: 5%;
+    }
+
+    .logo img{
+        height: 20px;
+    }
+
+    .contents{
+        font-size: .7em;
+        text-align: center;
+    }
+
+    .contents li{
+        padding-left: 0;
+        
+    }
+
+    /* CAR TYPES */
+
+    #cartypes{
+        margin-left: -70px;
+        margin-top: 300px;
+    }
+
+    /* CONTAINER */
+
+    .container{
+        scale: .45;
+        height: 30vh;
+        width: 100vw;
+        overflow: visible;
+        padding-top: 30vh;
+    }
+
+    /* MENU BUTTONS */
+
+    /* ABOUT CARS */
+
+    .about-cars{
+        height: 50vh;
+        width: 100vw;
+        font-size: .5em;
+        padding-left: 2%;
+        padding-right: 2%;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    /* ALL CARS */
+
+    .about-allcars{
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 5vh;
+    }
+
+    .cars-info{
+        height: auto;
+        flex-direction: column;
+        padding: 5%;
+        padding-bottom: 10%;
+    }
+
+    .cars-card{
+        padding-bottom: 3vh;
+    }
+
+    .cars-card img{
+        height: 180px;
+    }
+
+    /* CURVY FRAMES */
+
+    #top, #mid, #below{
+        height: auto;
+        width: auto;
+    }
+
+    /* FOOTER */
+
+    .footer{
+        height: auto;
+        width: auto;
+    }
+
+    .description{
+        height: auto;
+        width: auto;
+        font-size: .8em;
+        padding-left: 10%;
+        padding-bottom: 10%;
+    }
+
+    .secs{
+        padding: 5%;
+    }
+
+    /* TOP FIVE TABLE */
+
+    .table-bg{
+        display: none;
+    }
+
+    .table{
+        scale: .5;
+        height: 50vh;
+    }
+
+    th{
+        background-color: rgb(0, 0, 0);
+        color: white;
+    }
+    
+    td{
+        background-color: rgb(239, 239, 239);
+        animation: loadTable 1s forwards;
+    }
+    
+    .table-btns{
+        height: auto;
+        width: 100vw;
+        scale: .7;
+        padding-top: 0;
+    }
+
+    /* ABOUT CARS PAGES */
+
+
+
+
+
+
+
+
 }
